# agent-atc

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCKER_FIX_HANDOFF.md  Makefile  PROJECT_PLAN.md  README.md  REMAINING_WORK.md  docker-compose.yml  pyproject.toml
dashboards/: README.md  fleet-tower.json  governance.json
docs/: BLOG_DRAFT.md  BLOG_EVIDENCE_PLAN.md  PRODUCT_STRATEGY.md
docs/evidence/: SCREENSHOT_CHECKLIST.md  benchmark-table.md  exp01-flagship-near-miss.md  exp02-scope-violation.md  exp03-prompt-injection.md  exp04-budget-breaker.md  exp05-loop-suspicion.md  exp06-permission-creep.md  exp07-blast-radius.md  exp08-chaos-collector.md  exp09-concurrent-queue.md  exp10-policy-redteam.md  exp11-reversibility-spectrum.md  exp12-journal-capture.md
docs/evidence/screenshots/: README.md
otel-collector/: config.yaml
policies/: agents.yaml  risk_rules.yaml
scripts/: action_summary.py  concurrent_hold_queue.py  flagship_near_miss.py  prompt_injection_probe.py  redteam_policy_gaps.py  trigger_blast_radius.py  trigger_budget_breaker.py  trigger_concurrent_holds_synthetic.py  trigger_loop_suspicion.py  trigger_permission_creep.py  trigger_scope_violation.py
services/agent-runner/: Dockerfile  pyproject.toml
services/agent-runner/src/agent_runner/: __init__.py  groq_client.py  main.py  mission.py  personas.py  scenario_runner.py
services/agent-runner/tests/: server_helpers.py  test_integration_real_gateway.py  test_mission.py  test_scenario_runner.py
services/atc-core/: Dockerfile  pyproject.toml
services/atc-core/src/atc_core/: __init__.py  app.py  events.py  main.py
services/atc-core/src/atc_core/api/: __init__.py  routes.py  schemas.py  websocket.py
services/atc-core/src/atc_core/approval/: __init__.py  manager.py
services/atc-core/src/atc_core/gateway/: __init__.py  blast_radius.py  creep.py  journal.py  loops.py  registry.py  server.py  undo.py  upstream.py
services/atc-core/src/atc_core/narrator/: __init__.py  condense.py  groq_chat.py  narrator.py  span_fetcher.py  trace_api_fetcher.py
services/atc-core/src/atc_core/risk/: __init__.py  engine.py  models.py  reversibility.py  scorer.py  sql_facts.py
services/atc-core/src/atc_core/store/: __init__.py  db.py  models.py  schema.py
services/atc-core/static/: app.js  index.html  styles.css
services/atc-core/tests/: gateway_helpers.py  test_api.py  test_app.py  test_approval_manager.py  test_blast_radius.py  test_creep_detector.py  test_events.py  test_gateway.py  test_journal_capture.py  test_loop_detector.py  test_narrator.py  test_registry.py  test_reversibility.py  test_risk_engine.py  test_risk_scorer.py  test_store.py  test_trace_api_fetcher.py  test_undo_builder.py
services/history-seeder/: Dockerfile  pyproject.toml
services/history-seeder/src/history_seeder/: main.py  runner.py  seed.py
services/history-seeder/tests/: test_runner.py  test_seed.py
services/tools-db/: Dockerfile  pyproject.toml
services/tools-db/src/tools_db/: __init__.py  backend.py  seed.py  server.py
services/tools-db/tests/: server_helpers.py  test_backend.py  test_server.py
services/tools-fs/: Dockerfile  pyproject.toml
services/tools-fs/src/tools_fs/: __init__.py  sandbox.py  server.py
services/tools-fs/tests/: server_helpers.py  test_sandbox.py  test_server.py
services/tools-git/: Dockerfile  pyproject.toml
services/tools-git/src/tools_git/: __init__.py  repo.py  server.py
services/tools-git/tests/: test_repo.py  test_server.py
signoz/: README.md
signoz/pours/deployment/: compose.yaml
spikes/s1_gateway_proxy/: README.md  agent.py  common.py  gateway.py  pyproject.toml  run_spike.py  upstream_server.py
spikes/s4_groq_budget/: README.md  agent_spike.py  pyproject.toml
victim-postgres/: init.sql
