[project]
name = "agent-atc"
version = "0.1.0"
description = "ATC: Air Traffic Control for Autonomous Agents"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["packages/*", "services/*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
