[project]
name = "agent-runner"
version = "0.1.0"
description = "ATC agent-runner: Groq-powered tool-calling loops for coder-01, assist-01, comply-01"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.28.1",
    "groq>=1.5.0",
    "python-dotenv>=1.2.2",
    "atc-telemetry",
]

[tool.uv.sources]
atc-telemetry = { workspace = true }
atc-core = { workspace = true }
tools-fs = { workspace = true }
tools-db = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.4.0",
    # test-only: proves agent-runner authenticates against the *real*
    # gateway (+ real tool servers), not just the minimal auth-less test
    # double in server_helpers.py. Not a runtime dependency - production
    # talks to atc-core and the tool servers only over the network.
    "atc-core",
    "tools-fs",
    "tools-db",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_runner"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
