[project]
name = "atc-core"
version = "0.1.0"
description = "ATC gateway: MCP proxy, risk engine, approval manager, REST/WS, SQLite"
requires-python = ">=3.12"
dependencies = [
    "sqlglot>=25.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.22.1",
    "mcp[cli]>=1.28.1",
    "uvicorn>=0.51.0",
    "starlette>=1.3.1",
    "fastapi>=0.139.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atc_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
