[project]
name = "history-seeder"
version = "0.1.0"
description = "ATC one-shot job: backfills baseline action history for dashboards and creep-detection"
requires-python = ">=3.12"
dependencies = [
    "atc-core",
    "atc-telemetry",
    "python-dotenv>=1.2.2",
]

[tool.uv.sources]
atc-core = { workspace = true }
atc-telemetry = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/history_seeder"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
