[project]
name = "s1-gateway-proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.14.2",
    "httpx>=0.28.1",
    "mcp[cli]>=1.28.1",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
    "uvicorn>=0.51.0",
]
