[project]
name = "s4-groq-budget"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atc-core",
    "groq>=1.5.0",
    "python-dotenv>=1.2.2",
]

[tool.uv.sources]
atc-core = { path = "../../services/atc-core", editable = true }
